<resources>
    <string name="app_name">TurismoGoDPA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="INICIO">INICIO</string>
    <string name="et_name">¿Qué haremos hoy?</string>
    <string name="btn_search">Buscar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Tipo de Actividades -->
    <string name="et_date">dd/mm/aaaa</string>
    <string-array name="actividades_array">
        <item></item>
        <item>Tipo de actividad 1</item>
        <item>Tipo de actividad 2</item>
        <item>Tipo de actividad 3</item>
    </string-array>

    <!-- Confirmar Reservar -->
    <string name="btn_confirmar_name">CONFIRMAR</string>
    <string name="tvVolver_name">VOLVER</string>
    <string name="tvResumenReserva_title">RESUMEN RESERVA</string>
    <string name="tvNombreContacto">Nombre Contacto:</string>
    <string name="tvIDCuenta">ID Usuario:</string>
    <string name="tvNombreActividad_form">Nombre Actividad:</string>
    <string name="tvEmpresa_form">Empresa:</string>
    <string name="tvFecha_form">Fecha Reservada:</string>

    <!-- Reservar -->
    <string name="tvReserva_tittle">RESERVA</string>
    <string name="tvRNombreContacto">Nombre Contacto:</string>
    <string name="tvRTelefonoContacto">Teléfono:</string>
    <string name="tvRCantidadPersonas">Cant Personas:</string>
    <string name="tvRFechaReserva">Fecha Reservada:</string>
    <string name="tvRHoraReserva">Hora Reservada:</string>
    <string name="tvRbtnReservar_name">RESERVAR</string>
    <string-array name="NumPersonas_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="FechaReservas_array">
        <item>01-10-2022</item>
        <item>02-10-2022</item>
        <item>03-10-2022</item>
        <item>04-10-2022</item>
        <item>05-10-2022</item>
        <item>06-10-2022</item>
        <item>07-10-2022</item>
        <item>08-10-2022</item>
        <item>09-10-2022</item>
        <item>10-10-2022</item>
    </string-array>
    <string-array name="HoraReservas_array">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
    </string-array>


    <string name="IniciarComoEmpresa">Iniciar como empresa</string>
    <string name="TituloRegistroEmpresa">Hazte socio de TurismoGo</string>
    <string name="Ruc">RUC</string>
    <string name="RazonSocial">Razón Social</string>
    <string name="NombreContacto">Nombre de contacto</string>
    <string name="Telefono">Teléfono</string>
    <string name="Correo">Correo</string>
    <string name="Direccion">Dirección</string>
    <string name="Password">Password</string>
    <string name="Registro">REGISTRO</string>
    <string name="TituloRegistroUsuario">Hazte miembro de TurismoGo</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Dni">DNI</string>
    <string name="FechaNacimiento">" / /  Fech. Nac."</string>
    <string name="CorreoContacto">Correo Contacto</string>
    <string name="FechNac">Fecha Nac.</string>
    <string name="Estado">Estado</string>
    <string name="MiPerfil">Mi Perfil</string>
    <string name="Actualizar">Actualizar</string>
    <string name="DesactivarPerfil">Eliminar cuenta</string>
    <string name="Apellidos">Apellidos</string>
    <string name="btnVerMiReserva">DETALLES</string>
    <string name="tvMRTitle_name">MIS RESERVAS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="TituloPublicaciones">Actividades Activas</string>
    <string name="HistoPub">Historial Publicaciones</string>
    <string name="tituloPubHist">Titulo:</string>
    <string name="fechaPubHist">Fecha:</string>
    <string name="tipoPubHist">Tipo:</string>
    <string name="estadoPubHist">Estado:</string>
    <string name="CrearPubEmpTitulo">Crear Publicación</string>
    <string name="formAddPub">Título:*</string>
    <string name="formAddDesc">Descripción:*</string>
    <string name="formPubLugar">Lugar:*</string>
    <string name="formAddHorario">Horario:*</string>
    <string name="formAddFecha">Fecha:*</string>
    <string name="formAddTipo">Tipo:*</string>
    <string name="formAddPrecio">Precio:*</string>
    <string name="formAddImg">Imagenes:*</string>
    <string name="formAddHastFech">a</string>
    <string name="CrearPub">Crear</string>
    <string name="SubirImagenesPub">Subir Imagenes</string>
    <string name="UsuariosParticipantesEvent">Usuarios Participantes</string>
    <string name="histUserNombre">Nombre</string>
    <string name="histUserApellido">Apellido</string>
    <string name="histoUserDNI">DNI</string>
    <string name="histUserCorreo">Correo</string>
    <string name="TituloPubEjemplo">Tour a Caballo - Casa Hacienda</string>
    <string name="TipoActividadDetallePub">"Tipo actividad: "</string>
    <string name="PubDetallActividadEjem">Paseo</string>
    <string name="DetallePubEjemplo">Disfruta de una emocionante aventura explorando los hermosos paisajes naturales mientras cabalgas a través de senderos escénicos en compañía de majestuosos caballos. Nuestra actividad de \"Paseo en Caballo\" te brinda la oportunidad de experimentar la naturaleza de una manera única y emocionante.</string>
    <string name="ExploraZona">Explora la zona:</string>
    <string name="DuraPubDetalle">Duración:</string>
    <string name="HoraIniFinPubDetEjem">6:00 AM a 3:00 PM</string>
    <string name="tituloComentariosPubEmp">Comentarios</string>
    <string name="precio">Precio:</string>
    <string name="direccion">Dirección:</string>
    <string name="urlImage">URL Imagen</string>
    <string name="Hora">Hora:</string>
    <string name="UpdatePub">ACTUALIZAR</string>
    <string name="tituloActualizaPub">Actualizar Publicación</string>
    <string name="PriceDetPub">Precio: S/.</string>
    <string name="dateDetPub">Fecha:</string>
    <string name="Celular">Celular</string>
</resources>
