<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPubEmpActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CrearPubEmpTitulo"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddPub"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="82dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddDesc"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="129dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddPub"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="279dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddHorario"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="325dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddFecha"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="367dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddTipo"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="418dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddPrecio"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="495dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddImg"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="568dp" />

    <Button
        android:id="@+id/btFormPubAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="652dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formAddHastFech"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="279dp" />

</androidx.constraintlayout.widget.ConstraintLayout>