<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.inicio.InicioFragment">


    <EditText
        android:id="@+id/etBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#263C55"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etFechaFiltrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFechaFiltrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"

        android:backgroundTint="#263C55"
        android:ems="10"
        android:hint="@string/et_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/spTipoActividad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuscar" />

    <Spinner
        android:id="@+id/spTipoActividad"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btBuscarF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFechaFiltrada" />

    <Button
        android:id="@+id/btBuscarF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#263C55"
        android:text="@string/btn_search"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/rvActividadesFiltradas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipoActividad" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvActividadesFiltradas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#263C55"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btBuscarF" />

</androidx.constraintlayout.widget.ConstraintLayout>